# aitools

./: CITATION.cff  CMakeLists.txt  Jamroot  README.md  setup.py
.github/workflows/: deploy-latex.yml  run-tests-ubuntu.yml  run-tests-windows.yml  run-tests.yml
data/: prep.py  preprocess.py  run_experiments.sh
doc/: aitools.bib  aitools.tex
include/aitools/datasets/: algorithms.h  dataset.h  io.h  missing.h  random.h  sampling.h
include/aitools/decision_trees/: algorithms.h  decision_tree.h  decision_tree_options.h  impurity.h  index_range.h  io.h  learning.h  splitters.h  splitters_io.h
include/aitools/numerics/: csv.h  math_functions.h  math_utility.h  matrix.h
include/aitools/probabilistic_circuits/: algorithms.h  generative_forest.h  generative_forest_nodes.h  io.h  probabilistic_circuit.h  probabilistic_circuit_nodes.h
include/aitools/random_forests/: algorithms.h  io.h  learning.h  random_forest.h
include/aitools/statistics/: distribution.h  distribution_io.h  distributions.h  sampling.h
include/aitools/utilities/: array.h  bit_utility.h  command_line_group_tool.h  command_line_tool.h  container_utility.h  counting_iterator.h  file_utility.h  interval.h  iterator_range.h  logger.h  parse_numbers.h  print.h  random.h  stack_array.h  stopwatch.h  string_utility.h  text_utility.h
include/aitools/utilities/detail/: command.h
python/: setup.py
src/: decision_trees.cpp  logger.cpp  probabilistic_circuits.cpp  python-bindings.cpp  utilities.cpp
tests/: CMakeLists.txt  Jamfile  dataset_test.cpp  decision_tree_test.cpp  iterator_range_test.cpp  matrix_test.cpp  number_test.cpp  probabilistic_circuit_test.cpp  probability_test.cpp  random_forest_test.cpp
tests/test_headers/: Jamfile
tools/: CMakeLists.txt  Jamfile  buildgef.cpp  datasetinfo.cpp  learndt.cpp  learnrf.cpp  makedataset.cpp  pc.cpp  samplepc.cpp
