project(AITOOLS_TEST)

file(GLOB SOURCES CONFIGURE_DEPENDS "*.cpp")
foreach(SRC ${SOURCES})
  get_filename_component(BASE "${SRC}" NAME_WE)
  add_executable("${BASE}" "${SRC}")
  add_test(NAME "${BASE}" COMMAND "${BASE}")
  if (UNIX)
    target_link_libraries("${BASE}" LINK_PUBLIC aitoolslib doctest::doctest TBB::tbb)
  else()
    target_link_libraries("${BASE}" LINK_PUBLIC aitoolslib doctest::doctest)
  endif()
endforeach(SRC)
